----------------------------------- v0.6.1 -----------------------------------

BUGFIXES:
- Fixed a bug in the download url extraction code that was caused by a faulty 
  build.

----------------------------------- v0.6.0 -----------------------------------

FEATURES:
- WinRT and Windows Phone 8 support

----------------------------------- v0.5.0 -----------------------------------

FEATURES:
- Added a cancel option to the ProgressEventArgs class for canceling the 
  download.
  
BUGFIXES:
- Fixed disposal of some resources.

----------------------------------- v0.4.2 -----------------------------------

BUGFIXES:
- Fixed disposal of resources.

----------------------------------- v0.4.1 -----------------------------------

BUGFIXES:
- Fixed the parsing of the download urls, as YouTube changed their backend.

----------------------------------- v0.4.0 -----------------------------------

CHANGES:
- The VideoDownloader and the AudioDownloader classes now implement their own 
  progress events. This means that the old ProgressChanged event is now
  obsolete.
  This change was made, because the ProgressChanged event reported the first 
  50% as download progress and the second 50% as audio extraction progress.

  This was really inaccurate, as the download progress would be very slow in 
  relation to the audio extraction progress, so the AudioDownloader has now 
  two separate events: 
  DownloadProgressChanged and AudioExctractionProgressChanged.
  
  The VideoDownloader has the ProgressChanged event replaced with the 
  DownloadProgressChanged event, but they are basically the same, 
  so the real change is made to the AudioDownloader class.

----------------------------------- v0.3.4 -----------------------------------

BUGFIXES:
- Fixed a bug, that caused a 403 forbidden exception.
- Fixed a bug, that caused a NullReferenceExcepion when the download has 
  finished.

----------------------------------- v0.3.3 -----------------------------------

CHANGES: