@@ -1,3 +1,8 @@
+----------------------------------- v0.6.2 -----------------------------------
+
+BUGFIXES:
+- Fixed build yet again...
+
 ----------------------------------- v0.6.1 -----------------------------------
 
 BUGFIXES:
